DS-1554 fix: Tweak pdf header spacing

--- a/assets/css/custom-calendar-styles.css
+++ b/assets/css/custom-calendar-styles.css
@@ -118,6 +118,7 @@ table.fc-col-header.clone {
   position: absolute;
   top: 0;
   right: 0;
+  margin: 15px 0 0;
 }
 /* Fixes the layout of the listDay view in the cloned calendar for a standardized look in the PDF */
 .fc-listDay-view.clone {
